--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 copyright: 2023
 author: Nietzsche
+title: Tragedy
 logo: https://github.com/abikesa/abikesa.github.io/blob/main/png/hub_and_spoke.jpg?raw=true
